--- a/zfs_config.h.in
+++ b/zfs_config.h.in
@@ -139,6 +139,9 @@
 /* bio_set_op_attrs is available */
 #undef HAVE_BIO_SET_OP_ATTRS
 
+/* blkdev_get_by_path() exists and takes 4 args */
+#undef HAVE_BLKDEV_GET_BY_PATH_4ARG
+
 /* blkdev_get_by_path() handles ERESTARTSYS */
 #undef HAVE_BLKDEV_GET_ERESTARTSYS
 
@@ -147,6 +150,9 @@
 
 /* blkdev_issue_secure_erase() is available */
 #undef HAVE_BLKDEV_ISSUE_SECURE_ERASE
+
+/* blkdev_put() accepts void* as arg 2 */
+#undef HAVE_BLKDEV_PUT_HOLDER
 
 /* blkdev_reread_part() exists */
 #undef HAVE_BLKDEV_REREAD_PART
@@ -168,6 +174,9 @@
 
 /* blk_cleanup_disk() exists */
 #undef HAVE_BLK_CLEANUP_DISK
+
+/* blk_mode_t is defined */
+#undef HAVE_BLK_MODE_T
 
 /* block multiqueue is available */
 #undef HAVE_BLK_MQ
@@ -208,6 +217,9 @@
 /* BLK_STS_RESV_CONFLICT is defined */
 #undef HAVE_BLK_STS_RESV_CONFLICT
 
+/* Define if release() in block_device_operations takes 1 arg */
+#undef HAVE_BLOCK_DEVICE_OPERATIONS_RELEASE_1ARG
+
 /* Define if revalidate_disk() in block_device_operations */
 #undef HAVE_BLOCK_DEVICE_OPERATIONS_REVALIDATE_DISK
 
@@ -234,6 +246,9 @@
 
 /* copy_from_iter() is available */
 #undef HAVE_COPY_FROM_ITER
+
+/* copy_splice_read exists */
+#undef HAVE_COPY_SPLICE_READ
 
 /* copy_to_iter() is available */
 #undef HAVE_COPY_TO_ITER
@@ -494,6 +509,9 @@
 /* Define to 1 if you have the `issetugid' function. */
 #undef HAVE_ISSETUGID
 
+/* iter_iov() is available */
+#undef HAVE_ITER_IOV
+
 /* kernel has kernel_fpu_* functions */
 #undef HAVE_KERNEL_FPU
 
@@ -584,9 +602,6 @@
 /* Noting that make_request_fn() returns void */
 #undef HAVE_MAKE_REQUEST_FN_RET_VOID
 
-/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H
-
 /* iops->mkdir() takes umode_t */
 #undef HAVE_MKDIR_UMODE_T
 
@@ -658,6 +673,9 @@
 
 /* register_shrinker is vararg */
 #undef HAVE_REGISTER_SHRINKER_VARARG
+
+/* register_sysctl_table exists */
+#undef HAVE_REGISTER_SYSCTL_TABLE
 
 /* iops->rename2() exists */
 #undef HAVE_RENAME2
@@ -772,6 +790,9 @@
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdio.h> header file. */
+#undef HAVE_STDIO_H
 
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
@@ -1034,7 +1055,9 @@
 /* pde_data() is PDE_DATA() */
 #undef SPL_PDE_DATA
 
-/* Define to 1 if you have the ANSI C header files. */
+/* Define to 1 if all of the C90 standard headers exist (not just the ones
+   required in a freestanding environment). This macro is provided for
+   backward compatibility; new code need not use it. */
 #undef STDC_HEADERS
 
 /* True if ZFS is to be compiled for a FreeBSD system */
@@ -1042,6 +1065,9 @@
 
 /* True if ZFS is to be compiled for a Linux system */
 #undef SYSTEM_LINUX
+
+/* Index to use for variable-length array struct members */
+#undef VARLEN_ARRAY_IDX
 
 /* Version number of package */
 #undef VERSION
